完善main函数